@@ -15,28 +15,28 @@ class PackageInfo:
     def get_version(self, package):
         '''Return the installed version of a package.'''
 
-        raise Exception, 'this method must be implemented by a concrete subclass'
+        raise NotImplementedError, 'this method must be implemented by a concrete subclass'
 
     def get_available_version(self, package):
         '''Return the latest available version of a package.'''
 
-        raise Exception, 'this method must be implemented by a concrete subclass'
+        raise NotImplementedError, 'this method must be implemented by a concrete subclass'
 
     def get_dependencies(self, package):
         '''Return a list of packages a package depends on.'''
 
-        raise Exception, 'this method must be implemented by a concrete subclass'
+        raise NotImplementedError, 'this method must be implemented by a concrete subclass'
 
     def get_source(self, package):
         '''Return the source package name for a package.'''
 
-        raise Exception, 'this method must be implemented by a concrete subclass'
+        raise NotImplementedError, 'this method must be implemented by a concrete subclass'
 
     def is_distro_package(self, package):
         '''Check if a package is a genuine distro package (True) or comes from
         a third-party source.'''
 
-        raise Exception, 'this method must be implemented by a concrete subclass'
+        raise NotImplementedError, 'this method must be implemented by a concrete subclass'
 
     def get_architecture(self, package):
         '''Return the architecture of a package.
@@ -44,17 +44,17 @@ class PackageInfo:
         This might differ on multiarch architectures (e. g.  an i386 Firefox
         package on a x86_64 system)'''
 
-        raise Exception, 'this method must be implemented by a concrete subclass'
+        raise NotImplementedError, 'this method must be implemented by a concrete subclass'
 
     def get_files(self, package):
         '''Return list of files shipped by a package.'''
 
-        raise Exception, 'this method must be implemented by a concrete subclass'
+        raise NotImplementedError, 'this method must be implemented by a concrete subclass'
 
     def get_modified_files(self, package):
         '''Return list of all modified files of a package.'''
 
-        raise Exception, 'this method must be implemented by a concrete subclass'
+        raise NotImplementedError, 'this method must be implemented by a concrete subclass'
 
     def get_file_package(self, file, uninstalled=False, map_cachedir=None):
         '''Return the package a file belongs to, or None if the file is not
@@ -66,13 +66,13 @@ class PackageInfo:
         an existing directory which will be used to permanently store the
         downloaded maps. If it is not set, a temporary directory will be used.'''
 
-        raise Exception, 'this method must be implemented by a concrete subclass'
+        raise NotImplementedError, 'this method must be implemented by a concrete subclass'
 
     def get_system_architecture(self):
         '''Return the architecture of the system, in the notation used by the
         particular distribution.'''
 
-        raise Exception, 'this method must be implemented by a concrete subclass'
+        raise NotImplementedError, 'this method must be implemented by a concrete subclass'
 
     def set_mirror(self, url):
         '''Explicitly set a distribution mirror URL for operations that need to
@@ -81,7 +81,7 @@ class PackageInfo:
         By default, the mirror will be read from the system configuration
         files.'''
 
-        raise Exception, 'this method must be implemented by a concrete subclass'
+        raise NotImplementedError, 'this method must be implemented by a concrete subclass'
 
     def get_source_tree(self, srcpackage, dir, version=None):
         '''Download given source package and unpack it into dir (which should
@@ -97,6 +97,6 @@ class PackageInfo:
         (which might be a subdirectory of dir). Return None if the source is
         not available.'''
 
-        raise Exception, 'this method must be implemented by a concrete subclass'
+        raise NotImplementedError, 'this method must be implemented by a concrete subclass'
 
 import packaging_impl
