@@ -1,8 +1,10 @@
 apport (0.83) UNRELEASED; urgency=low
 
   * apport/crashdb.py: Separate abstract from implemented functions.
+  * apport/crashdb.py, apport/packaging.py, apport/ui.py: Use
+    NotImplementedError instead of Exception in the abstract methods.
 
- -- Martin Pitt <martin.pitt@ubuntu.com>  Fri, 08 Jun 2007 12:04:42 +0200
+ -- Martin Pitt <martin.pitt@ubuntu.com>  Fri, 08 Jun 2007 13:28:40 +0200
 
 apport (0.82) gutsy; urgency=low
 
